[gd_scene load_steps=4 format=3 uid="uid://dxsh1jbg4ndsd"]

[ext_resource type="Script" path="res://scripts/ui/EventDialog.gd" id="1_1b18q"]
[ext_resource type="Texture2D" uid="uid://d4r8mswsrlb5j" path="res://assets/images/events/random_event.png" id="2_6lq66"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w26c1"]
bg_color = Color(0.15, 0.15, 0.15, 0.95)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 5

[node name="EventDialog" type="Panel"]
custom_minimum_size = Vector2(500, 350)
offset_right = 500.0
offset_bottom = 350.0
theme_override_styles/panel = SubResource("StyleBoxFlat_w26c1")
script = ExtResource("1_1b18q")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 15.0
offset_right = 200.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "Заголовок события"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EventImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -100.0
offset_right = -120.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6lq66")
expand_mode = 1
stretch_mode = 5

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 220.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "Описание события. Здесь будет подробное объяснение того, что произошло и какие у вас есть варианты действий."
vertical_alignment = 1
autowrap_mode = 2

[node name="OptionsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Option1" type="Button" parent="OptionsContainer"]
layout_mode = 2
text = "Вариант действия 1"

[node name="Option2" type="Button" parent="OptionsContainer"]
layout_mode = 2
text = "Вариант действия 2"

[node name="Option3" type="Button" parent="OptionsContainer"]
layout_mode = 2
text = "Вариант действия 3"